syntax = "proto3";
package syncpb;

import "gogoproto/gogo.proto";

option go_package = "github.com/rkcloudchain/gosync/syncpb";
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

message ChunkChecksums {
    bytes file_hash = 1;
    repeated ChunkChecksum checksums = 2;
}

message ChunkChecksum {
    uint64 block_index = 1;
    int64 block_size = 2;
    uint32 weak_hash = 3;
    bytes strong_hash = 4;
}